--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,21 @@
         android:theme="@style/Theme.AppOrderFood"
         tools:targetApi="31">
         <activity
+            android:name=".UserFragmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ShoppingCartFragmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SearchFragmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeFragmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
